<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back_login"
    tools:context=".RegistroActivity">
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="30dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/titulo_registro"
            android:textStyle="bold"
            android:layout_marginTop="15dp"
            android:textSize="20sp"
            android:gravity="center"/>
        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            app:lottie_imageAssetsFolder="assets"
            app:lottie_fileName="plataforma.json"
            app:lottie_autoPlay="true"
            app:lottie_loop="false">
        </com.airbnb.lottie.LottieAnimationView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_nombres"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_marginTop="15dp"/>
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:boxCornerRadiusTopStart="6dp"
            app:boxCornerRadiusTopEnd="6dp"
            app:boxCornerRadiusBottomStart="6dp"
            app:boxCornerRadiusBottomEnd="6dp"
            app:hintEnabled="false">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_names"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txt_nombres"
                android:inputType="textPersonName" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_apellidos"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_marginTop="15dp"/>
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:boxCornerRadiusTopStart="6dp"
            app:boxCornerRadiusTopEnd="6dp"
            app:boxCornerRadiusBottomStart="6dp"
            app:boxCornerRadiusBottomEnd="6dp"
            app:hintEnabled="false">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_lastnames"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txt_apellidos"
                android:inputType="textPersonName" />
        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_correo"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_marginTop="15dp"/>
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:boxCornerRadiusTopStart="6dp"
            app:boxCornerRadiusTopEnd="6dp"
            app:boxCornerRadiusBottomStart="6dp"
            app:boxCornerRadiusBottomEnd="6dp"
            app:hintEnabled="false">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_mail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txt_correo"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_password"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_marginTop="15dp"/>
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:boxCornerRadiusTopStart="6dp"
            app:boxCornerRadiusTopEnd="6dp"
            app:boxCornerRadiusBottomStart="6dp"
            app:boxCornerRadiusBottomEnd="6dp"
            app:passwordToggleEnabled="true"
            app:hintEnabled="false">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txt_password"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_confirmar_password1"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_marginTop="15dp"/>
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            android:layout_marginTop="8dp"
            app:boxCornerRadiusTopStart="6dp"
            app:boxCornerRadiusTopEnd="6dp"
            app:boxCornerRadiusBottomStart="6dp"
            app:boxCornerRadiusBottomEnd="6dp"
            app:hintEnabled="false">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_confirmpassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txt_confirmar_password1"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/registration_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:accessibilityLiveRegion="polite"
            android:visibility="gone"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btn_registrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_registrar"
            android:gravity="center"
            android:layout_marginTop="15dp"
            android:textSize="17dp"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/lbl_goback"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_backlogin"
            android:layout_marginTop="15dp"
            android:textStyle="bold"
            android:gravity="center"
            android:textSize="18sp"/>
    </androidx.appcompat.widget.LinearLayoutCompat>

</ScrollView>