<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="320dp"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="130dp"
        android:padding="15dp"
        android:orientation="vertical"
        android:layout_gravity="center">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/desarrollo"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:textSize="18sp"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/logo"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/developer"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_marginTop="10dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/descripcion_dev"
            android:justificationMode="inter_word"
            android:layout_marginTop="10dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/version"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:textSize="16dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/telef"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:textSize="18dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/descripcion_dev"
            android:justificationMode="inter_word"
            android:layout_marginTop="10dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/descripcion_dev"
            android:justificationMode="inter_word"
            android:layout_marginTop="10dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/descripcion_dev"
            android:justificationMode="inter_word"
            android:layout_marginTop="10dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            android:gravity="center">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                android:gravity="center">
                <ImageButton
                    android:id="@+id/btnfonodev"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/cel"
                    android:scaleType="centerCrop"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_marginTop="10dp">
                <ImageButton
                    android:id="@+id/btnyutudev"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/youtu"
                    android:scaleType="centerCrop"/>
            </LinearLayout>

        </LinearLayout>
        <Button
            android:id="@+id/btnvolverdev"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/lbl_backlogin"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginTop="15dp"/>


    </LinearLayout>
</ScrollView>