<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back_3"
    tools:context=".Mis_datos.Mis_datosActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:src="@drawable/despertar"
                android:scaleType="centerCrop" />

            <ImageView
                android:id="@+id/ivfotousuarioMD"
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:src="@drawable/profile2"
                android:layout_marginTop="172dp"
                android:layout_centerHorizontal="true"
                android:scaleType="centerCrop"
                android:clickable="true"
                android:focusable="true" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="15dp"
                android:background="@drawable/bg_body">

                <TextView
                    android:id="@+id/tvcorreousuarioMD"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/correo_md"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvcodigoMD"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/codigo_md"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/mis_datos"
                    android:textColor="@color/black"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textSize="19sp"
                    android:layout_marginTop="15dp" />

                <TextView
                    android:id="@+id/tvDatosMD"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/datos_md"
                    android:textColor="@color/black"
                    android:layout_marginTop="5dp"
                    android:textSize="17sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/bg_leyenda"
                    android:gravity="center">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/leyenda_md"
                        android:textColor="@color/black"
                        android:padding="5dp"
                        android:textSize="16sp"
                        android:gravity="center" />

                </LinearLayout>

                <!-- NOMBRE -->
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp">

                    <EditText
                        android:id="@+id/etNombreMD"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/nombre_md"
                        android:textColor="@color/black"
                        android:textColorHint="@color/black"
                        android:padding="15dp"
                        android:drawableLeft="@drawable/flecha"
                        android:inputType="textPersonName" />

                </com.google.android.material.textfield.TextInputLayout>

                <!-- APELLIDO -->
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp">

                    <EditText
                        android:id="@+id/etApellidoMD"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/apellido_md"
                        android:textColor="@color/black"
                        android:textColorHint="@color/black"
                        android:padding="15dp"
                        android:drawableLeft="@drawable/flecha"
                        android:inputType="textPersonName" />

                </com.google.android.material.textfield.TextInputLayout>

                <!-- FECHA DE NACIMIENTO -->
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp">

                    <EditText
                        android:id="@+id/etFechaNacimientoMD"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/fecha_nacimiento"
                        android:textColor="@color/black"
                        android:textColorHint="@color/black"
                        android:padding="15dp"
                        android:drawableLeft="@drawable/flecha"
                        android:inputType="date" />

                </com.google.android.material.textfield.TextInputLayout>

                <!-- EDAD -->
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp">

                    <EditText
                        android:id="@+id/etEdadMD"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/flecha"
                        android:hint="@string/edad_md"
                        android:textColor="@color/black"
                        android:textColorHint="@color/black"
                        android:padding="15dp"
                        android:inputType="number" />

                </com.google.android.material.textfield.TextInputLayout>

                <!-- TELEFONO -->
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp">

                    <EditText
                        android:id="@+id/etTelefonoMD"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/flecha"
                        android:hint="@string/telefono_md"
                        android:textColor="@color/black"
                        android:textColorHint="@color/black"
                        android:padding="15dp"
                        android:inputType="phone" />

                </com.google.android.material.textfield.TextInputLayout>

                <!-- DOMICILIO -->
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp">

                    <EditText
                        android:id="@+id/etDomicilioMD"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/domicilio_md"
                        android:textColor="@color/black"
                        android:textColorHint="@color/black"
                        android:padding="15dp"
                        android:drawableLeft="@drawable/flecha"
                        android:inputType="textPostalAddress" />

                </com.google.android.material.textfield.TextInputLayout>

                <!-- TIKTOK -->
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp">

                    <EditText
                        android:id="@+id/etTiktokMD"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/tiktok_md"
                        android:textColor="@color/black"
                        android:textColorHint="@color/black"
                        android:padding="15dp"
                        android:drawableLeft="@drawable/flecha"
                        android:inputType="text" />

                </com.google.android.material.textfield.TextInputLayout>

                <!-- BOTON GUARDAR -->
                <Button
                    android:id="@+id/btnGuardarMD"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:text="Actualizar"
                    android:textColor="@color/black"
                    android:layout_marginTop="15dp"
                    android:padding="15dp"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:paddingEnd="35dp"
                    android:drawableLeft="@drawable/guardar"
                    android:layout_gravity="center" />

            </LinearLayout>

        </LinearLayout>

    </androidx.appcompat.widget.LinearLayoutCompat>

</ScrollView>

